tests/output/self_hosted/leading_indent_error.txt
tests/leading_indent_error.oomph:1: error: should be function, class, union or typedef

        export func main():
    ^^^^

assert() failed in "self_hosted/error.oomph", line N
